--- a/config/environment.cfg
+++ b/config/environment.cfg
@@ -1,7 +1,17 @@
+# Google Cloud specific variables
+PCF_PROJECT_ID=$(gcloud config get-value core/project)          # your GCP project ID, which you can retrieve in your console
+PCF_REGION=CHANGE_ME_REGION                           # e.g. us-central1
+PCF_AZ_1=CHANGE_ME_AZ_1                               # e.g. us-central1-a
+PCF_AZ_2=CHANGE_ME_AZ_2                               # e.g. us-central1-b
+PCF_AZ_3=CHANGE_ME_AZ_3                               # e.g. us-central1-c
+
+# Access tokens
 PCF_PIVNET_UAA_TOKEN=12345                  # see https://network.pivotal.io/users/dashboard/edit-profile
+
+# FQDN Definitions
 PCF_DOMAIN_NAME=example.com                 # e.g. example.com
 PCF_SUBDOMAIN_NAME=pcf                      # e.g. mypcf
 PCF_OPSMAN_ADMIN_PASSWD=my_dummy_password   # e.g. make sure you can remember this password
 
-PCF_PROJECT_ID=$(gcloud config get-value core/project)          # your GCP project ID, which you can retrieve in your console
 PCF_OPSMAN_FQDN=pcf.${PCF_SUBDOMAIN_NAME}.${PCF_DOMAIN_NAME}    # initialization of the PCF FQDN based on previous variables
+
