--- a/config/environment.cfg
+++ b/config/environment.cfg
@@ -5,8 +5,10 @@ PCF_AZ_1=CHANGE_ME_AZ_1                               # e.g. us-central1-a
 PCF_AZ_2=CHANGE_ME_AZ_2                               # e.g. us-central1-b
 PCF_AZ_3=CHANGE_ME_AZ_3                               # e.g. us-central1-c
 
-# Access tokens
+# Access tokens and versions of products to download
 PCF_PIVNET_UAA_TOKEN=12345                  # see https://network.pivotal.io/users/dashboard/edit-profile
+OPSMAN_VERSION=2.3.5
+PAS_VERSION=2.3.3
 
 # FQDN Definitions
 PCF_DOMAIN_NAME=example.com                 # e.g. example.com
