Added configuration variable to point to the GCP configuration file. Added script to install and destroy the jumpbox without knowing the Terraform commands.

--- a/config/environment.cfg
+++ b/config/environment.cfg
@@ -1,5 +1,7 @@
 # Google Cloud specific variables
 PCF_PROJECT_ID=$(gcloud config get-value core/project)          # your GCP project ID, which you can retrieve in your console
+GCP_CREDENTIALS_FILE="path_to_json_credential_files"
+
 PCF_REGION=CHANGE_ME_REGION                           # e.g. us-central1
 PCF_AZ_1=CHANGE_ME_AZ_1                               # e.g. us-central1-a
 PCF_AZ_2=CHANGE_ME_AZ_2                               # e.g. us-central1-b
