--- a/config/environment.cfg.example
+++ b/config/environment.cfg.example
@@ -10,6 +10,9 @@ PCF_AZ_3=CHANGE_ME_AZ_3                               # e.g. us-central1-c
 # Access tokens and versions of products to download
 PCF_PIVNET_UAA_TOKEN=12345                  # see https://network.pivotal.io/users/dashboard/edit-profile
 OPSMAN_IMAGE="ops-manager-us/pcf-gcp-x.x-build.xxx.tar.gz" # Change with the correct build image
+PAS_VERSION=2.3.4
+PAS_RELEASE_ID=237338
+PAS_SLUG="elastic-runtime"
 
 # FQDN Definitions
 PCF_DOMAIN_NAME=example.com                 # e.g. example.com
